Fix user menu z-index issue.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -250,7 +250,6 @@ main {
   margin: 10px;
   border-radius: 3px;
   overflow: hidden;
-  position: relative;
   color: rgb(77,77,77)
 }
 
